--- a/views/components/nav.njk
+++ b/views/components/nav.njk
@@ -11,6 +11,9 @@
         <li>
             <a href="/test">Test</a>
         </li>
+        <li>
+            <a href="calc">Kalkylator</a>
+        </li>
     </ul>
 </nav>
 {% endblock %}
